api-gateway/base/nodeport-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-nodeport
  namespace: envoy-gateway-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: eg
    gateway.envoyproxy.io/owning-gateway-namespace: default
  ports:
    - name: http
      port: 80
      targetPort: 10080
      nodePort: 30080
